upload week 3 slides and update lab 1, 2, & 3